# BangumiMCP

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  package.json  pyproject.toml  wrangler.jsonc
scripts/: sync_python_modules.py
src/: config.py  enums.py  server.py  worker.py
src/prompts/: workflow_prompts.py
src/resources/: openapi_resource.py
src/tools/: character_tools.py  collection_tools.py  index_tools.py  person_tools.py  revision_tools.py  subject_tools.py  user_tools.py
src/utils/: api_client.py  formatters.py  request_auth.py
