[project]
name = "bangumi-tv"
version = "0.1.0"
description = "For Bangumi TV API MCP Service"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp==1.12.0",
    "httpx>=0.27.0",
    "pydantic==2.10.6",
    "pydantic-settings==2.5.2",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "workers-py",
]
